--- a/backend/package.json
+++ b/backend/package.json
@@ -39,13 +39,15 @@
     "joi": "^17.7.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.0",
+    "mysql2": "^3.14.1",
+    "openai": "^4.100.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0",
+    "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
+    "sqlite3": "^5.1.7",
     "uuid": "^9.0.1",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
