--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,11 +7,16 @@ DB_USERNAME=your_db_username
 DB_PASSWORD=your_db_password
 DB_DATABASE=your_database_name
 DB_HOST=localhost
-DB_DIALECT=mysql
+DB_PORT=3306 # Example, adjust if different
+DB_DIALECT=mysql # or postgres, or sqlite
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key
-JWT_EXPIRATION=86400 # 24 hours in seconds
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
+JWT_ACCESS_EXPIRATION_MINUTES=60
+JWT_REFRESH_EXPIRATION_DAYS=7
+JWT_PASSWORD_RESET_EXPIRATION_MINUTES=60
+JWT_EMAIL_VERIFICATION_EXPIRATION_MINUTES=1440
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000 # 15 minutes
@@ -22,6 +27,9 @@ CLIENT_URL=http://localhost:3000
 
 # AI Coach Configuration
 AI_COACH_USER_ID=bffc93b4-f1d1-4395-bd7e-aef35648ed4e
+AI_COACH_USERNAME=AICoach
+AI_COACH_EMAIL=coach@example.com
+AI_COACH_PASSWORD=aSecurePassword123!
 
 # OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key
