--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.2.1",
     "helmet": "^6.0.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.0",
@@ -49,6 +50,7 @@
     "sockjs-client": "^1.6.1",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.1",
+    "validator": "^13.15.15",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
